Modify ASSERT_UNUSED and UNUSED_PARAM similar to Qt's Q_UNUSED. https://bugs.webkit.org/show_bug.cgi?id=44870

Reviewed by Darin Adler.

* wtf/Assertions.h:
* wtf/UnusedParam.h:



Canonical link: https://commits.webkit.org/57249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66489 268f45cc-cd09-0410-ab3c-d52691b4dbfc